--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 
     <title>{{ page.title | default: site.title | escape }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMKXfyGEFjRnSX0P4yV6arICpQYBGubXfQYlUbJ" crossorigin="anonymous">
     {% seo %} <!-- Ensures SEO metadata -->
     {% include head-custom.html %} <!-- Optional custom head content -->
   </head>
