--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,18 @@
 
     <title>{{ page.title | default: site.title | escape }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMKXfyGEFjRnSX0P4yV6arICpQYBGubXfQYlUbJ" crossorigin="anonymous">
     {% seo %} <!-- Ensures SEO metadata -->
     {% include head-custom.html %} <!-- Optional custom head content -->
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
+
+    <header class="page-header">
+      {% unless page.url == "/" %}
+        <a href="/" class="back-button">← Back to Home</a>
+      {% endunless %}
+      <h1 class="page-title">{{ page.title | default: site.title }}</h1>
+    </header>
 
     <main id="content" class="main-content" role="main">
       {{ content }}
