--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <!-- Site Header -->
     <header class="page-header">
       {% unless page.url == "/" %}
-        <a href="/" class="back-button">←</a>
+        <a href="/" class="back-button">Home</a>
       {% endunless %}
       <h1 class="page-title">{{ page.title | default: site.title }}</h1>
     </header>
