--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% seo %} <!-- Ensures SEO metadata -->
     {% include head-custom.html %} <!-- Optional custom head content -->
+    {% include analytics.html %}
+
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -17,7 +19,7 @@
     <!-- Site Header -->
     <header class="page-header">
       {% unless page.url == "/" %}
-        <a href="/" class="back-button">Home</a>
+        <a href="/" class="back-button">←</a>
       {% endunless %}
       <h1 class="page-title">{{ page.title | default: site.title }}</h1>
     </header>
@@ -26,6 +28,5 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
     </main>
-
   </body>
 </html>
